--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
   font-family: "Open Sans", sans-serif;
   margin: 0;
 }
+section {
+  margin-top: 100px;
+}
 .orange {
   color: orangered;
 }
@@ -19,6 +22,7 @@ body {
   border-radius: 2px;
   padding: 8px 15px;
   font-weight: 600;
+  cursor: pointer;
 }
 .button-primary a {
   color: aliceblue;
@@ -53,13 +57,111 @@ nav li {
 }
 .header {
   background-color: rgba(255, 68, 0, 0.059);
+  background-image: url(images/header_bg.png);
+  background-size: 700px;
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 /* banner related styles */
 .banner {
-  padding: 30px 20px 20px 150px;
+  padding: 30px 20px 0px 150px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  margin-bottom: 100px;
 }
 .banner .profile-pic {
-  width: 400px;
+  width: 500px;
+}
+.banner-paragraph {
+  width: 75%;
+  margin-top: 25px;
+  color: var(--dark-03, #757575);
+}
+.banner-greeting {
+  font-size: 40px;
+  font-weight: lighter;
+  color: #181818;
+  margin-bottom: 0px;
+}
+.banner-title {
+  font-size: 75px;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+.banner-content {
+  max-width: 500px;
+}
+/* main section styles */
+main {
+  max-width: 850px;
+  margin: 0 auto;
+}
+
+/* about section styles */
+.about {
+  padding: 50px 80px;
+
+  background-color: rgba(255, 68, 0, 0.059);
+}
+.about-title {
+  text-align: center;
+  font-size: 35px;
+}
+.about-paragraph {
+  text-align: center;
+  color: var(--dark-03, #757575);
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+.about-info {
+  text-align: center;
+}
+.info-title {
+  font-weight: 500;
+  color: var(--dark-03, #757575);
+  margin-bottom: 0;
+}
+.info-description {
+  font-weight: 600;
+  margin-top: 10px;
+}
+/* what i do section style*/
+.what-i-do {
+  text-align: center;
+  margin-top: 100px;
+}
+.what-i-do-title {
+  font-size: 35px;
+  margin-bottom: 0;
+}
+#what-i-do-description {
+  color: #757575;
+  padding: 50px 80px;
+  margin-top: 5px;
+}
+/* skills section style */
+.skills-container {
+  display: flex;
+  gap: 15px;
+  width: 200px;
+}
+.skill {
+  padding: 30px;
+  text-align: left;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+  color: #757575;
+
+  font-size: 16px;
+}
+/* resume section styles  */
+.resume-column-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
 }
