--- a/style.css
+++ b/style.css
@@ -215,3 +215,12 @@ main {
   margin-top: 20px;
   text-align: center;
 }
+/* footer style  */
+.footer{
+  display: flex;
+  padding: 80px 200px;
+  background-color: rgba(255, 68, 0, 0.059);
+}
+.footer-title{
+  text-align: left;
+}
