--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ section {
   font-size: large;
   font-weight: 700;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 .button-primary:hover {
@@ -68,10 +69,10 @@ nav li {
 }
 .header {
   background-color: rgba(255, 68, 0, 0.059);
-  background-image: url(images/header_bg.png);
-  background-size: 700px;
+  background-image: url('images/header_bg.png'),url(images/developer.png);
+  background-size: 700px,100px;
   background-repeat: no-repeat;
-  background-position: bottom right;
+  background-position: bottom right,top left;
 }
 /* banner related styles */
 .banner {
@@ -80,6 +81,12 @@ nav li {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 100px;
+}
+.contact-button{
+  background: none;
+  border: 1px solid #757575;
+  color: #474747;
+  margin-left: 10px;
 }
 .banner .profile-pic {
   width: 500px;
@@ -217,10 +224,47 @@ main {
 }
 /* footer style  */
 .footer{
+  
   display: flex;
   padding: 80px 200px;
   background-color: rgba(255, 68, 0, 0.059);
+  margin-bottom: 0;
 }
 .footer-title{
   text-align: left;
+}
+.footer-details{
+  margin-right: 100px;
+  color: #757575;
+}
+.half-width{
+  width: 90%;
+}
+form>input[type="Name"],input[type="Email"], textarea{
+  margin-bottom: 20px;
+  padding: 18px 25px;
+  color: #757575;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: rgb(251, 251, 251);
+  border: 0;
+  border-radius: 5px;
+  width: 100%;
+}
+input:hover{
+  box-shadow: 0 0 5px 1px rgba(255, 153, 0, 0.586);
+}
+textarea:hover{
+  box-shadow: 0 0 5px 1px rgba(255, 153, 0, 0.586);
+}
+.social-icons>img{
+  max-width: 20px;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+.footer-text{
+  text-align: center;
+  background-color: #757575;
+  color: aliceblue;
+  margin-top: -15px;
+  padding: 5px;
 }
