--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ main {
 .about-title {
   text-align: center;
   font-size: 35px;
+  color: #474747;
 }
 .about-paragraph {
   text-align: center;
