--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ nav li {
   border: 1px solid #757575;
   color: #474747;
   margin-left: 10px;
+  padding: 12px 40px;
 }
 
 .banner .profile-pic {
@@ -343,7 +344,7 @@ textarea:hover {
   .footer-column{
     width: 85%;
   }
-  nav,.banner-content,.resume-container,.skills-container,.footer,.banner{
+  .banner-content,.resume-container,.skills-container,.footer,.banner{
     flex-wrap: wrap;
   }
   .resume-container{
@@ -372,10 +373,22 @@ textarea:hover {
   nav{
     margin-left: 0;
     margin-right: 0;
+    align-items:start;
+    justify-content: flex-start;
+  }
+  .nav-title{
+    margin-top: 0;
   }
   nav ul {
-    flex-direction: column;
-  margin: 10px;
+    margin: 10px;
+    text-align: center;
+}
+.contact-button{
+  margin-left: 0px;
+}
+.hire-me{
+  font-size: medium;
+  padding: 10px;
 }
 }
 @media screen and (min-width:576px) and (max-width: 992px){
